--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
